manifests/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: your-namespace
  labels:
    app: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: registry/mlflow:latest
          imagePullPolicy: IfNotPresent
          command:
            - mlflow
            - server
            - --host=0.0.0.0
            - --port=80
            - --workers=4
            - --expose-prometheus=true
            - --backend-store-uri=sqlite:////mlflow/mlflow.db
            - --default-artifact-root=s3://mlflow
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources: 
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
          - name: mlflow
            mountPath: /mlflow
      volumes:
          - name: mlflow
            persistentVolumeClaim:
              claimName: mlflow
