manifests/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: your-namespace
  labels:
    app: mlflow
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: mlflow
